--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,8 @@ main{
     margin-top: 3%;
 }
 
-#add{
+/* non ho idea del perchè non funziona con la classe "contenuto" */
+.add{
     margin-left: 12%;
 }
 
@@ -39,7 +40,7 @@ main button{
     border-color: #47ABF0;
     border-radius: 3px;
     color: #fff;
-}
+}   
 
 input{
     color: lightgrey;
@@ -57,13 +58,35 @@ input{
     font-size:  15px;
 }
 
+
+.check::after{
+    content: "\002713";
+    font-size: 5px;
+    border-radius: 50%;
+    border: 1px solid lightgreen;
+    color: lightgreen;
+    line-height: 100%;
+    vertical-align: middle;
+}
+
+.ex::after{
+    content: "\000078";
+    font-size: 5px;
+    border-radius: 50%;
+    border-width: 1px solid red;
+    color: red;
+    line-height: 100%;
+    vertical-align: middle;
+}
+
 .label{
     border-radius: 5px;
+    color: #fff;
 }
 
 .label-blu{
-    border-color: ;
-    background-color: ;
+    border-color: #45AFEB;
+    background-color: #45AFEB;
 }
 
 .label-viola{
